Bug 2789 - Xvfb does not honor the "-dpi" option
Summary: Xvfb does not honor the "-dpi" option
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/DDX/Xvfb (show other bugs)
Version: unspecified
Hardware: x86 (IA32) All
: high normal
Assignee: Roland Mainz
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-03-22 16:08 UTC by Roland Mainz
Modified: 2005-03-21 21:33 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Patch for 2005-03-22-trunk (3.09 KB, patch)
2005-03-22 16:30 UTC, Roland Mainz
no flags Details | Splinter Review

Description Roland Mainz 2005-03-22 16:08:03 UTC
[Originally reported in
http://lists.freedesktop.org/pipermail/xorg/2005-February/006258.html by Kirby
C. Bohling <kbohling@birddog.com>]
Xvfb does not honor the "-dpi" option and always defaults to 100 DPI.
Comment 1 Roland Mainz 2005-03-22 16:15:42 UTC
Taking bug myself...
Comment 2 Roland Mainz 2005-03-22 16:30:48 UTC
Created attachment 2187 [details] [review]
Patch for 2005-03-22-trunk
Comment 3 Roland Mainz 2005-03-22 16:33:43 UTC
Patch checked-in...

/cvs/xorg/xc/ChangeLog,v  <--  xc/ChangeLog
new revision: 1.830; previous revision: 1.829
/cvs/xorg/xc/programs/Xserver/hw/vfb/InitOutput.c,v  <-- 
xc/programs/Xserver/hw/vfb/InitOutput.c
new revision: 1.7; previous revision: 1.6
Mailing the commit message to xorg-commit@lists.freedesktop.org...

... marking bug as FIXED.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.