//bugs.freedesktop.org/show_bug.cgi?id=2789) attachment #2187     (https://bugs.freedesktop.org/attachment.cgi?id=2187) Fix Xvfb to honor     the "-dpi" option (instead of using a hardcoded value of 100DPI).